# librpiraw

./: .gitignore  Makefile.am  README.md  configure.ac  librpiraw.pc.in
include/: Makefile.am  local.h  rpiraw.h
src/: Makefile.am  convert.c  demosaic_edge.c  demosaic_malvar_he_culter.c  demosaic_nearest_neighbor.c  file_png.c  histogram.c  histogram_equalize.c  luminance.c  raw.c  statistic.c
test/: Makefile.am  test.c  test_demosaic_nearest_neighbor.c  test_file_png.c  test_histogram.c  test_luminance.c  test_statistic.c
